--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,4 +31,14 @@
         android:layout_marginBottom="16dp"
         app:srcCompat="@android:drawable/ic_dialog_email" />
 
+
+    <TextView
+        android:id="@+id/stop_fps"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="150dp"
+        android:background="#ff00ff"
+        android:gravity="center"
+        android:text="停止FPS" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
